welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: illegal start of simple pattern
 var: c=Color.green
    ^SlugSnail:5: error: '=' expected but ';' found.
    def hunt(c:Color) {
^